Fix showing logo on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,11 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
     max-height: 40px;
 }
-
+.logo{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
@@ -327,6 +331,10 @@ h1, h2, h3, h4, h5, h6 {
 .mobile-nav-active .mobile-nav-toggle i {
     color: #fff;
 }
+
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
 # Hero Section
